# OpenGL

./: .gitignore  CMakeLists.txt  OpenGLtest.sln
Linking/include/glad/: glad.h
OpenGLtest/: OpenGLtest.vcxproj  OpenGLtest.vcxproj.filters
OpenGLtest/assets/: fragment_core.glsl  vertex_core.glsl
OpenGLtest/src/: glad.c  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.frag  shader.h  shader.vert
imgui/backends/: imgui_impl_opengl3.cpp
